<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BoxingScores</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="id_display">Boxer Id</string>
    <string name="name_display">Boxer Name</string>
    <string name="weight_display">Weight Class</string>
    <string name="wins_display">Wins</string>
    <string name="loss_display">Losses</string>
    <string name="btn_add_display">Add Boxer</string>
    <string name="btn_previous">&lt;&lt;</string>
    <string name="btn_next">>></string>
    <string name="btn_remove">Remove</string>
    <string name="btn_update">Update</string>
    <string name="btn_find">Find</string>
    <string name="btn_save">Save</string>

</resources>
