<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hakeem.boxingscores.BoxingMain" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvIdLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_display" />

            <TextView
                android:id="@+id/tv_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/id_display" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_display" />

            <EditText
                android:id="@+id/edNameDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/name_display" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvWeightLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight_display" />

            <EditText
                android:id="@+id/edWeightDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/weight_display" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvWinsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wins_display" />

            <EditText
                android:id="@+id/edWinsDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/wins_display" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvLossLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loss_display" />

            <EditText
                android:id="@+id/edLossDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/loss_display" />

        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnAdd"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_add_display" />

            <Button
                android:id="@+id/btnPrevious"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_previous" />

            <Button
                android:id="@+id/btnNext"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_next" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnRemove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_remove" />

            <Button
                android:id="@+id/btnUpdate"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_update" />

            <Button
                android:id="@+id/btnFind"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_find" />

        </TableRow>

    </TableLayout>

</LinearLayout>
